<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_vs_player">Player Vs Player</string>
    <string name="player_vs_ai">Player Vs Ai</string>
    <string name="resume">Restore Game</string>
    <string name="settings">Settings</string>
    <string name="TicTacToe">Tic Tac Toe</string>
    <string name="turn_str">Turn:</string>
    <string name="diff_settings_str">Smart AI</string>
    <string name="settings_switch_diff">AI</string>
    <string name="btn_text_moves">Moves</string>
    <string name="btn_text_board">Board</string>
    <string name="moves_header_str">Moves History</string>
    <string name="settings_switch_text_off">Off</string>
    <string name="settings_switch_text_on">On</string>
    <string name="next_move_helper_str">Sugest Move</string>
    <string name="restore_game_text">Loading game . . .</string>
</resources>