<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tictactoe.entry.WelcomeScreenFragment">


        <Button
            android:id="@+id/player_vs_player"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/entry_button_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/player_vs_player"
            android:textSize="@dimen/entry_button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/player_vs_ai"
            android:layout_width="0dp"
            android:layout_height="@dimen/entry_button_height"
            android:textSize="@dimen/entry_button_text_size"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/player_vs_ai"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="@+id/player_vs_player"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/player_vs_player"
            app:layout_constraintTop_toBottomOf="@+id/player_vs_player"
            app:layout_constraintVertical_bias="0.16" />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="@dimen/entry_button_height"
            android:layout_marginTop="224dp"
            android:text="@string/settings"
            android:textSize="@dimen/entry_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/player_vs_ai"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/player_vs_ai"
            app:layout_constraintTop_toBottomOf="@+id/player_vs_player"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>