<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.example.tictactoe.gamescreen.GameScreenFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameScreenFragment">

        <TextView
            android:id="@+id/currentPlayer"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:text="@string/turn_str"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintStart_toStartOf="@+id/gridLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.401" />

        <ImageView
            android:id="@+id/currentPlayerImg"
            android:layout_width="80dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="@+id/gridLayout"
            app:layout_constraintTop_toTopOf="@+id/currentPlayer"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/x_img_black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/grid_img"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="3"
            android:useDefaultMargins="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_0_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(0,0)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_0_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(0,1)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_0_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(0,2)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_1_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(1,0)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_1_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(1,1)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_1_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(1,2)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_2_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(2,0)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_2_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(2,1)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView_2_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/TicTacToe"
                    android:onClick="@{() -> fragment.onGridSelected(2,2)}"/>
            </LinearLayout>

        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="211dp"
            android:layout_height="114dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout">

            <ImageView
                android:id="@+id/change_btn_image_view"
                android:layout_width="56dp"
                android:layout_height="54dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:srcCompat="@drawable/ic_menu_history_image"/>

            <Button
                android:id="@+id/change_view_btn"
                android:text="@string/btn_text_moves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_btn_image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>